src/components/atoms/footer-main/footer-main.scss
@use "../../../sass/settings";
@use "../../../sass/typography";
@use "../../../sass/mixins";

.site-footer {
  border-top: 1px solid var(--divider);

  @include mixins.padding(48, "top");
  @include mixins.padding(16, "bottom");
}

.footer-navigation {
  @include mixins.padding(48, "bottom");
}

.footer-navigation__list {
  list-style: none;
  margin: 0;
  padding: 0;
  text-align: center;
}

.footer-navigation__list_item {
  color: var(--color-text);
  font-family: var(--font-family-primary);
  letter-spacing: 0.5px;
  text-transform: uppercase;

  @include typography.font-size-and-vertical-height(11, 24);
}

.footer-navigation__list_link {
  color: var(--color-text);
  text-decoration: none;

  &:hover {
    color: var(--color-primary);
  }
}

.site-smallprint__copyright_link {
  color: var(--color-text);
  text-decoration: none;

  &:hover {
    color: var(--color-primary);
  }
}

@media only all and (min-width: settings.$breakpoint-medium) {
  .footer-navigation__list {
    column-count: 2;
    column-gap: 0.5rem;
    text-align: left;
  }

  .footer-navigation__list_item {
    break-inside: avoid-column;
  }
}

.site-smallprint {
  font-family: var(--font-family-secondary);
  padding: 0 6%;
  text-align: center;

  @include typography.font-size-and-vertical-height(11, 24);

  small {
    display: block;

    @include typography.font-size-and-vertical-height(11, 24);
  }
}

.carbon-neutral-wrapper {
  text-align: center;

  .carbon-neutral-link {
    align-items: center;
    display: inline-flex;
    flex-flow: row wrap;
    justify-content: center;
    max-width: 247px;

    @include mixins.margin(0 0 47);
  }

  @media only all and (min-width: settings.$breakpoint-medium) {
    text-align: left;
  }
}

@media only all and (min-width: settings.$breakpoint-medium) {
  .site-footer__container {
    padding: 0 6%;
    display: table;
    display: flex;
    flex-wrap: wrap;
    margin: auto;
    max-width: settings.$max-site-width;

    .grid-cell:nth-child(1) {
      flex: 1 50%;
      float: left;
      width: 50%;

      @include mixins.padding(12, "bottom");
    }

    .grid-cell:nth-child(2) {
      flex: 1 50%;
      float: right;
      width: 50%;

      @include mixins.padding(12, "bottom");
    }

    .grid-cell:nth-child(3) {
      clear: both;
      flex: 1 100%;
      width: 100%;
    }
  }

  .site-smallprint {
    padding: 0;
    text-align: left;
  }

  .site-smallprint__copyright {
    text-align: center;
  }

  .small {
    @include mixins.padding(24, "bottom");
  }

  .address {
    font-style: normal;

    @include mixins.padding(84, "bottom");
  }
}

@media only all and (min-width: settings.$breakpoint-medium) {
  .footer-navigation {
    @include mixins.padding(72, "bottom");
  }
}

// Social Links

.social-links {
  text-align: center;

  @include mixins.padding(0 0 19 0);
}

.social-links__list {
  margin: 0;
  padding: 1px 0 0;
}

.social-links__list_item {
  display: inline-block;
  margin: 0;

  @include mixins.padding(0 5);
}

.social-links__list_link {
  svg path {
    fill: var(--color-text);
  }

  &:hover svg path {
    fill: var(--color-primary);
  }
}

.github-link-wrapper {
  text-align: center;

  .github-link {
    align-items: center;
    color: var(--color-text);
    display: inline-flex;
    flex-flow: row wrap;
    justify-content: center;
    min-height: 24px;
    text-decoration: none;
    text-transform: uppercase;
    width: auto;

    @include mixins.margin(0 0 60);

    svg path {
      fill: var(--color-text);
    }

    &:hover svg path {
      fill: var(--color-primary);
    }

    &:hover {
      color: var(--color-primary);
    }

    .github-link--text {
      color: var(--color-text);
      font-family: var(--font-family-primary);
      letter-spacing: 0.5px;
      text-transform: uppercase;

      @include typography.font-size-and-vertical-height(11, 24);
      @include mixins.margin(2 0 0 7);
    }
  }
}

@media only all and (min-width: settings.$breakpoint-medium) {
  .social-links {
    text-align: left;
  }

  .github-link-wrapper {
    text-align: initial;

    .github-link {
      justify-content: start;

      @include mixins.margin(0 0 72);
    }
  }

  .social-links__list_item {
    padding: 0;

    @include mixins.padding(24, "right");
  }
}

